--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -42,7 +42,7 @@
         </div>
         <div class="col-sm-6">
             @{string address = ViewBag.Address.Replace(",", "").Replace(" ", "%20");
-              string str = "https://maps.google.com/maps?q=" +address+ "%20&t=&z=13&ie=UTF8&iwloc=&output=embed";}
+                string str = "https://maps.google.com/maps?q=" + address + "%20&t=&z=13&ie=UTF8&iwloc=&output=embed";}
             <iframe class="faculty-map" src=@str allowfullscreen></iframe>
             <a class="compare-link" href="@Url.RouteUrl("compare")"><h4>Compare with other faculties<i class="fas fa-arrow-right"></i></h4></a>
         </div>
@@ -57,17 +57,19 @@
                         <a href="@Url.RouteUrl("program_page", new { id = studyProgram.Id})">
                             <h4>@studyProgram.Title</h4>
                         </a>
-                        <div class="d-flex">
-                            <div class="d-flex mr-5">
-                                <p class="mr-5">
-                                    <i class="fas fa-star"></i>
-                                </p>
-                                <!-- Add display of rating -->
-                                <p class="mr-5">
-                                    Overall @Math.Round(studyProgram.Reviews.Average(r => r.OveralRating), 2).ToString()
-                                </p>
+                        @if (studyProgram.Reviews.Count > 0)
+                        {
+                            <div class="d-flex">
+                                <div class="d-flex mr-5">
+                                    <p class="mr-5">
+                                        <i class="fas fa-star"></i>
+                                    </p>
+                                    <p class="mr-5">
+                                        Overall @Math.Round(studyProgram.Reviews.Average(r => r.OveralRating), 2).ToString()
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        }
                     </div>
                 }
             </div>
