--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,44 +3,43 @@
 }
 <html>
 <body>
-    <div class="container-fluid mt-20">
+    <div class="container-fluid">
+        <h1 class="mb-50">Welcome to University Advisor!</h1>
         <div class="row">
             <div class="col-sm-8">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
                     </ol>
 
-                    <!-- Wrapper for slides -->
                     <div class="carousel-inner">
-                        <div class="item active">
-                            <img src="~/Assets/images/sample.jpg" alt="Slide1">
+                        <div class="item active m-h-400">
+                            <img src="https://www.st-andrews.ac.uk/assets/university/study-at-st-andrews/images/study-hero-banner-750x500.jpg" alt="Slide1">
                             <div class="carousel-caption">
-                                <h3>Caption</h3>
-                                <p>More Caption!</p>
+                                <h3>Explore</h3>
+                                <p>Universities, faculties, study programs</p>
                             </div>
                         </div>
 
-                        <div class="item">
-                            <img src="~/Assets/images/sample.jpg" alt="Slide2">
+                        <div class="item m-h-400">
+                            <img src="https://g3.dcdn.lt/images/pix/vilniaus-universitetas-edgaro-kurausko-nuotr-78325971.jpg" alt="Slide2">
                             <div class="carousel-caption">
-                                <h3>Caption</h3>
-                                <p>More caption!</p>
+                                <h3>Share</h3>
+                                <p>Your opinion with fellow students</p>
                             </div>
                         </div>
 
-                        <div class="item">
+                        <div class="item m-h-400">
                             <img src="~/Assets/images/sample.jpg" alt="Slide3">
                             <div class="carousel-caption">
-                                <h3>Caption</h3>
-                                <p>More caption!</p>
+                                <h3>Compare</h3>
+                                <p>Different universities and choose your favorite</p>
                             </div>
                         </div>
                     </div>
-                    <!-- Left and right controls -->
+
                     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                         <span class="sr-only">Previous</span>
