--- a/Views/Review/Partials/_LecturerFormPartial.cshtml
+++ b/Views/Review/Partials/_LecturerFormPartial.cshtml
@@ -2,7 +2,7 @@
 @model Review
 
 <form method="post" action="@Url.RouteUrl("review_lecturer")">
-    <div class="col-sm-6 mt-20">
+    <div class="col-lg-6 mt-20">
         <div class="form-group">
             <label for="university">Select your university</label>
             <select name="university" class="form-control m-w-unset" id="lecturer-university">
@@ -25,7 +25,7 @@
             </select>
         </div>
     </div>
-    <div class="col-sm-6 mt-20">
+    <div class="col-lg-6 mt-20">
         <div class="form-group">
             <label for="overall-input">Overall rating</label>
             <div class="stars" id="overall">
@@ -82,7 +82,7 @@
         </div>
     </div>
 
-    <div class="col-sm-12">
+    <div class="col-lg-12">
         @Html.TextArea("Text", new { @class = "form-control review-textarea w-100 m-w-unset", @placeholder = "Enter your review... ", @rows = 5 })
         <button id="lecturer-review-submit" type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
     </div>
