--- a/Views/Review/Partials/_LecturerFormPartial.cshtml
+++ b/Views/Review/Partials/_LecturerFormPartial.cshtml
@@ -2,88 +2,90 @@
 @model Review
 
 <form method="post" action="@Url.RouteUrl("review_lecturer")">
-    <div class="col-lg-6 mt-20">
-        <div class="form-group">
-            <label for="university">Select your university</label>
-            <select name="university" class="form-control m-w-unset" id="lecturer-university">
-                <option selected disabled hidden>University</option>
-                @foreach (University uni in ViewBag.Universities)
-                {
-                    <option value="@uni.Id">@uni.Title</option>
-                }
-            </select>
-        </div>
+    <div class="container-fluid">
+        <div class="col-lg-6 mt-20">
+            <div class="form-group">
+                <label for="university">Select your university</label>
+                <select name="university" class="form-control m-w-unset" id="lecturer-university">
+                    <option selected disabled hidden>University</option>
+                    @foreach (University uni in ViewBag.Universities)
+                    {
+                        <option value="@uni.Id">@uni.Title</option>
+                    }
+                </select>
+            </div>
 
-        <div class="form-group">
-            <label for="lecturer">Select lecturer</label>
-            <select name="lecturer" class="form-control m-w-unset" id="lecturer">
-                <option selected disabled hidden>Lecturer</option>
-                @foreach (Lecturer lecturer in ViewBag.Lecturers)
-                {
-                    <option value="@lecturer.Id">@lecturer.Name</option>
-                }
-            </select>
+            <div class="form-group">
+                <label for="lecturer">Select lecturer</label>
+                <select name="lecturer" class="form-control m-w-unset" id="lecturer">
+                    <option selected disabled hidden>Lecturer</option>
+                    @foreach (Lecturer lecturer in ViewBag.Lecturers)
+                    {
+                        <option value="@lecturer.Id">@lecturer.Name</option>
+                    }
+                </select>
+            </div>
         </div>
-    </div>
-    <div class="col-lg-6 mt-20">
-        <div class="form-group">
-            <label for="overall-input">Overall rating</label>
-            <div class="stars" id="overall">
-                @Html.TextBoxFor(r => r.OveralRating, new { @type = "hidden", id = "overall-input" })
-                @for (int i = 0; i < 10; i++)
-                {
-                    <span onclick="handleRating(this, 'OVERALL')" id="@i" class="fa fa-star"></span>
-                }
+        <div class="col-lg-6 mt-20">
+            <div class="form-group">
+                <label for="overall-input">Overall rating</label>
+                <div class="stars" id="overall">
+                    @Html.TextBoxFor(r => r.OveralRating, new { @type = "hidden", id = "overall-input" })
+                    @for (int i = 0; i < 10; i++)
+                    {
+                        <span onclick="handleRating(this, 'OVERALL')" id="@i" class="fa fa-star"></span>
+                    }
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="personality-input">Personality</label>
+                <div class="stars" id="personality">
+                    @Html.TextBoxFor(r => r.Personality, new { @type = "hidden", id = "personality-input" })
+                    @for (int i = 0; i < 10; i++)
+                    {
+                        <span onclick="handleRating(this, 'PERSONALITY')" id="@i" class="fa fa-star"></span>
+                    }
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="competence-input">How competent is the lecturer?</label>
+                <div class="stars" id="competence">
+                    @Html.TextBoxFor(r => r.Competence, new { @type = "hidden", id = "competence-input" })
+                    @for (int i = 0; i < 10; i++)
+                    {
+                        <span onclick="handleRating(this, 'COMPETENCE')" id="@i" class="fa fa-star"></span>
+                    }
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="delivery-input">How well lecturer delivers information?</label>
+                <div class="stars" id="delivery">
+                    @Html.TextBoxFor(r => r.Delivery, new { @type = "hidden", id = "delivery-input" })
+                    @for (int i = 0; i < 10; i++)
+                    {
+                        <span onclick="handleRating(this, 'DELIVERY')" id="@i" class="fa fa-star"></span>
+                    }
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="strictness-input">How strict is the lecturer?</label>
+                <div class="stars" id="strictness">
+                    @Html.TextBoxFor(r => r.Strictness, new { @type = "hidden", id = "strictness-input" })
+                    @for (int i = 0; i < 10; i++)
+                    {
+                        <span onclick="handleRating(this, 'STRICTNESS')" id="@i" class="fa fa-star"></span>
+                    }
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            <label for="personality-input">Personality</label>
-            <div class="stars" id="personality">
-                @Html.TextBoxFor(r => r.Personality, new { @type = "hidden", id = "personality-input" })
-                @for (int i = 0; i < 10; i++)
-                {
-                    <span onclick="handleRating(this, 'PERSONALITY')" id="@i" class="fa fa-star"></span>
-                }
-            </div>
+        <div class="col-lg-12">
+            @Html.TextArea("Text", new { @class = "form-control review-textarea w-100 m-w-unset", @placeholder = "Enter your review... ", @rows = 5 })
+            <button id="lecturer-review-submit" type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
         </div>
-
-        <div class="form-group">
-            <label for="competence-input">How competent is the lecturer?</label>
-            <div class="stars" id="competence">
-                @Html.TextBoxFor(r => r.Competence, new { @type = "hidden", id = "competence-input" })
-                @for (int i = 0; i < 10; i++)
-                {
-                    <span onclick="handleRating(this, 'COMPETENCE')" id="@i" class="fa fa-star"></span>
-                }
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="delivery-input">How well lecturer delivers information?</label>
-            <div class="stars" id="delivery">
-                @Html.TextBoxFor(r => r.Delivery, new { @type = "hidden", id = "delivery-input" })
-                @for (int i = 0; i < 10; i++)
-                {
-                    <span onclick="handleRating(this, 'DELIVERY')" id="@i" class="fa fa-star"></span>
-                }
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="strictness-input">How strict is the lecturer?</label>
-            <div class="stars" id="strictness">
-                @Html.TextBoxFor(r => r.Strictness, new { @type = "hidden", id = "strictness-input" })
-                @for (int i = 0; i < 10; i++)
-                {
-                    <span onclick="handleRating(this, 'STRICTNESS')" id="@i" class="fa fa-star"></span>
-                }
-            </div>
-        </div>
-    </div>
-
-    <div class="col-lg-12">
-        @Html.TextArea("Text", new { @class = "form-control review-textarea w-100 m-w-unset", @placeholder = "Enter your review... ", @rows = 5 })
-        <button id="lecturer-review-submit" type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
     </div>
 </form>
