--- a/Assets/css/university.css
+++ b/Assets/css/university.css
@@ -5,16 +5,6 @@
     box-shadow: 3px 5px 15px 2px rgba(0,0,0,0.1);
 }
 
-.dorms-container {
-    width: 600px;
-    max-width: 40vw;
-}
-
-.faculty-container {
-    width: 600px;
-    max-width: 40vw;
-}
-
 .compare-link{
     color: #333;
 }
@@ -29,3 +19,6 @@
     margin-top: 10px;
 }
 
+.c {
+    min-width: 100%;
+}
