--- a/Assets/css/universityList.css
+++ b/Assets/css/universityList.css
@@ -2,3 +2,10 @@
     width: 600px;
     max-width: 40vw;
 }
+
+@media only screen and (max-width: 1024px){
+    .university-container {
+        width: 100%;
+        max-width: 100%;
+    }
+}
