--- a/Views/University/UniversityList.cshtml
+++ b/Views/University/UniversityList.cshtml
@@ -7,18 +7,19 @@
     <div class="d-flex flex-wrap mt-50">
         @foreach (University uni in ViewBag.Universities)
         {
-            <div class="university-container card">
+        <div class="university-container card">
+            <div class="card-text">
                 <a href="@Url.RouteUrl("universities_page", new { id = uni.Id })">
                     <h3>@uni.Title</h3>
                 </a>
                 <div class="d-flex">
                     <div class="d-flex mr-5">
-                        <p class="mr-5">
-                            <i class="fas fa-globe"></i>
-                        </p>
-                        <p class="mr-5">
-                            <a target="_blank" href="@uni.Website">@uni.Website</a>
-                        </p>
+                            <p class="mr-5 web-page">
+                                <i class="fas fa-globe"></i>
+                            </p>
+                            <p class="mr-5 web-page">
+                                <a target="_blank" href="@uni.Website">@uni.Website</a>
+                            </p>
                     </div>
                     <div class="d-flex">
                         <p class="mr-5">
@@ -27,8 +28,9 @@
                         <p>@uni.Faculties.Count faculties</p>
                     </div>
                 </div>
-                <p>@uni.Description</p>
+                <p class="web-page">@uni.Description</p>
             </div>
+        </div>
         }
     </div>
 </div>
