--- a/Views/University/UniversityList.cshtml
+++ b/Views/University/UniversityList.cshtml
@@ -28,7 +28,7 @@
                         <p>@uni.Faculties.Count faculties</p>
                     </div>
                 </div>
-                <p class="web-page">@uni.Description</p>
+                <p>@uni.Description</p>
             </div>
         </div>
         }
