--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="container-fluid">
         <h1 class="mb-50">Welcome to University Advisor!</h1>
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-lg-8">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -50,7 +50,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4">
                 <h2>About</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
