--- a/Views/StudyProgram/StudyProgram.cshtml
+++ b/Views/StudyProgram/StudyProgram.cshtml
@@ -48,7 +48,7 @@
                 {
                     <div class="review-container">
                         <div class="row">
-                            <i class="fas fa-user-circle fa-5x col-sm-2"></i>
+                            <i class="fas fa-user-circle fa-5x col-md-2"></i>
                             <div class="review-details col-sm-10">
                                 <h5>@review.User.Name</h5>
                                 <i class="fas fa-star"></i> Rating @review.OveralRating/10
