--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 <html>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid carousel-w">
         <h1 class="mb-50">Welcome to University Advisor!</h1>
         <div class="row">
             <div class="col-lg-8">
