--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -174,3 +174,36 @@ word-wrap: break-word;
         width: 100%;
     }
 }
+
+@media only screen and (max-width: 1200px) {
+    .carousel-w {
+        max-width: 80%;
+    }
+    .item{
+        height: 400px;
+    }
+        .item > img {
+            min-width: 100%;
+            min-height: 100%;
+        }
+}
+
+@media only screen and (max-width: 400px){
+    .carousel-w {
+        max-width: 100%;
+    }
+    .item {
+        height: 180px;
+    }
+    .item > img{
+        min-width: 100%;
+        min-height: 100%;
+    }
+    .compare-link {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    .sm-mt-20{
+        margin-top: 20px;
+    }
+}
