--- a/Views/Course/Course.cshtml
+++ b/Views/Course/Course.cshtml
@@ -88,7 +88,7 @@
                         <label for="file">Upload your course material</label>
                         <input class="mt-5" type="file" name="file" id="file" />
                         <input class="mt-5" value="@ViewBag.Course.Id" type="hidden" name="course" id="course" />
-                        <button class="mt-20 btn btn-primary" type="submit">Upload</button>
+                        <button class="mt-20 btn btn-primary rsp" type="submit" >Upload</button>
                     </form>
                 </div>
             }
