--- a/Assets/css/course.css
+++ b/Assets/css/course.css
@@ -5,3 +5,9 @@
     width: 300px;
     text-align: right;
 }
+
+@media only screen and (max-width: 1200px) {
+    .rsp {
+        width: 100%;
+    }
+}
