--- a/Views/StudyProgram/StudyProgram.cshtml
+++ b/Views/StudyProgram/StudyProgram.cshtml
@@ -13,7 +13,9 @@
                     @ViewBag.StudyProgram.Description
                 </p>
             </div>
-            <a class="compare-link" href="@Url.RouteUrl("compare")"><h4>Compare with other study programs<i class="fas fa-arrow-right"></i></h4></a>
+            <div class="sm-mt-20">
+                <a class="compare-link" href="@Url.RouteUrl("compare")"><h4>Compare with other study programs<i class="fas fa-arrow-right"></i></h4></a>
+            </div>
         </div>
         <div class="col-sm-6">
             <h3>Statistics</h3>
