--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -76,7 +76,7 @@
                 }
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 locations">
             <h3>Locations (@ViewBag.StatsData.LocationCount)</h3>
             <div class="d-flex flex-wrap">
                 @foreach (Address a in ViewBag.Faculty.Addresses)
