--- a/Assets/css/faculty.css
+++ b/Assets/css/faculty.css
@@ -10,3 +10,13 @@
     width: 100%;
     border: 0;
 }
+
+@media only screen and (max-width: 600px) {
+    .faculty-map {
+        max-height: 200px;
+    }
+
+    .locations {
+        display: none;
+    }
+}
