created new route 'universities-list'

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             <div class="navbar-collapse collapse">
                 @Html.Partial("_LoginPartial")
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="@Url.RouteUrl("universities_page")">Universities</a></li>
+                    <li><a href="@Url.RouteUrl("universities_list")">Universities</a></li>
                     <li><a href="@Url.RouteUrl("review_page")">Leave a review!</a></li>
                     @if (User.IsInRole("Admin"))
                     {
