--- a/Assets/css/faculty.css
+++ b/Assets/css/faculty.css
@@ -11,7 +11,12 @@
     border: 0;
 }
 
-.studyprogram-container {
-    width: 600px;
-    max-width: 40vw;
+@media only screen and (max-width: 600px) {
+    .faculty-map {
+        max-height: 200px;
+    }
+
+    .locations {
+        display: none;
+    }
 }
