--- a/Views/Course/Course.cshtml
+++ b/Views/Course/Course.cshtml
@@ -6,7 +6,7 @@
 <h2><i class="fas fa-book"></i>  @ViewBag.Course.Title</h2>
 <div class="container">
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <h3>Statistics</h3>
             <table class="table">
                 <tbody>
@@ -68,7 +68,7 @@
                 }
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <h3>Student uploaded course material (@ViewBag.Course.UploadedFiles.Count files)</h3>
             <div class="m-w-400">
                 @foreach (UploadedFile file in ViewBag.Course.UploadedFiles)
@@ -88,7 +88,7 @@
                         <label for="file">Upload your course material</label>
                         <input class="mt-5" type="file" name="file" id="file" />
                         <input class="mt-5" value="@ViewBag.Course.Id" type="hidden" name="course" id="course" />
-                        <button class="mt-20 btn btn-primary" type="submit">Upload</button>
+                        <button class="mt-20 btn btn-primary rsp" type="submit" >Upload</button>
                     </form>
                 </div>
             }
