Render slider in all pages.

--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -29,6 +29,10 @@
         margin: auto auto;
     }
 
+    .carousel-inner .item.narrow {
+        height: 200px;
+    }
+
 .navbar-brand {
     display: flex;
     align-items: center;
