--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,96 @@
             </ul>
         </div>
     </div>
+    @if (Request.Url.AbsolutePath == "/")
+    {
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
+
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="~/Assets/images/slide1.jpg">
+                    <div class="carousel-caption">
+                        <h3>Explore</h3>
+                        <p>Universities, faculties, study programs</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="~/Assets/images/slide2.jpg">
+                    <div class="carousel-caption">
+                        <h3>Share</h3>
+                        <p>Your opinion with fellow students</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="~/Assets/images/slide3.jpg">
+                    <div class="carousel-caption">
+                        <h3>Compare</h3>
+                        <p>Different universities and choose your favorite</p>
+                    </div>
+                </div>
+            </div>
+
+            <a class="left carousel-control" href="#carousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    }
+    else
+    {
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
+
+            <div class="carousel-inner">
+                <div class="item active narrow">
+                    <img src="~/Assets/images/slide1.jpg">
+                    <div class="carousel-caption">
+                        <h3>Explore</h3>
+                        <p>Universities, faculties, study programs</p>
+                    </div>
+                </div>
+
+                <div class="item narrow">
+                    <img src="~/Assets/images/slide2.jpg">
+                    <div class="carousel-caption">
+                        <h3>Share</h3>
+                        <p>Your opinion with fellow students</p>
+                    </div>
+                </div>
+
+                <div class="item narrow">
+                    <img src="~/Assets/images/slide3.jpg">
+                    <div class="carousel-caption">
+                        <h3>Compare</h3>
+                        <p>Different universities and choose your favorite</p>
+                    </div>
+                </div>
+            </div>
+
+            <a class="left carousel-control" href="#carousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    }
     @RenderBody()
 
     <div class="container body-content">
