--- a/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,11 +1,12 @@
 ﻿@model Advisor.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
 <hr />
+<h5>Use another service to login:</h5>
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Count() == 0) {
+    if (loginProviders.Count() == 0)
+    {
         <div>
             <p>
                 There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
@@ -13,15 +14,28 @@
             </p>
         </div>
     }
-    else {
-        using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl })) {
+    else
+    {
+        using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl }))
+        {
             @Html.AntiForgeryToken()
-            <div id="socialLoginList">
-                <p>
-                    @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+            <div id="socialLoginList" class="d-flex justify-content-center">
+                @foreach (AuthenticationDescription p in loginProviders)
+                {
+                    <input class="login-input" type="submit" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">
+                    if (p.AuthenticationType == "Google")
+                    {
+                        <label for="@p.AuthenticationType">
+                            <img class="login-logo" src="~/Assets/images/google.png" />
+                        </label>
                     }
-                </p>
+                    else
+                    {
+                        <label for="@p.AuthenticationType">
+                            <img class="login-logo" src="~/Assets/images/fb.png" />
+                        </label>
+                    }
+                }
             </div>
         }
     }
