Redesign register form.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
             </a>
         </div>
     }
-    else if (Request.Url.AbsolutePath != "/login")
+    else if (Request.Url.AbsolutePath != "/login" && Request.Url.AbsolutePath != "/register")
     {
         <div id="carousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
