--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -1,58 +1,53 @@
 ﻿@using Advisor.Models
 @{
-    ViewBag.Title = "Faculty";
+    ViewBag.Title = ViewBag.Faculty.Title;
 }
+<div class="faculty-container">
+    <div class="row">
+        <div class="col-md-5 col-sm-12">
+            <h2>
+                <i class="fas fa-university"></i>  @ViewBag.Faculty.Title
+            </h2>
+            <div class="stats-container mt-50">
+                <h3 class="font-light">About</h3>
+                <div class="about-section">
+                    <p>
+                        @ViewBag.Faculty.Description
+                    </p>
+                </div>
+                <h3 class="font-light">Statistics</h3>
+                <table class="table">
+                    <tbody>
+                        <tr>
+                            <th scope="row">Overall rating</th>
+                            <td>@ViewBag.StatsData.OveralRating / 10</td>
+                        </tr>
+                        <tr>
+                            <th>Number of study programs</th>
+                            <td>@ViewBag.StatsData.StudyProgramCount</td>
+                        </tr>
+                        <tr>
+                            <th>Level of satisfaction</th>
+                            <td>@ViewBag.StatsData.Satisfaction / 10</td>
+                        </tr>
+                        <tr>
+                            <th>Average graduate salary</th>
+                            <td>@ViewBag.StatsData.AverageSalary €</td>
+                        </tr>
+                        <tr>
+                            <th>Percentage of graduates working in relevant industry</th>
+                            <td>@ViewBag.StatsData.RelevantIndustryPercentage %</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
-<h2><i class="fas fa-university"></i>  @ViewBag.Faculty.Title</h2>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6">
-            <h3>About</h3>
-            <div class="about-section">
-                <p>
-                    @ViewBag.Faculty.Description
-                </p>
+            <div class="mt-20">
+                @Html.Partial("_CompareButton")
             </div>
-            <h3>Statistics</h3>
-            <table class="table">
-                <tbody>
-                    <tr>
-                        <th scope="row">Overall rating</th>
-                        <td>@ViewBag.StatsData.OveralRating/10</td>
-                    </tr>
-                    <!-- Consider moving this near study program label and removing it from here-->
-                    <tr>
-                        <th>Number of study programs</th>
-                        <td>@ViewBag.StatsData.StudyProgramCount</td>
-                    </tr>
-                    <tr>
-                        <th>Level of satisfaction</th>
-                        <td>@ViewBag.StatsData.Satisfaction/10</td>
-                    </tr>
-                    <tr>
-                        <th>Average graduate salary</th>
-                        <td>@ViewBag.StatsData.AverageSalary€</td>
-                    </tr>
-                    <tr>
-                        <th>Percentage of graduates working in relevant industry</th>
-                        <td>@ViewBag.StatsData.RelevantIndustryPercentage%</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col-sm-6">
-            @{string address = ViewBag.Address.Replace(",", "").Replace(" ", "%20");
-                string str = "https://maps.google.com/maps?q=" + address + "%20&t=&z=13&ie=UTF8&iwloc=&output=embed";}
-            <iframe class="faculty-map" src=@str allowfullscreen></iframe>
-            <div class="sm-mt-20">
-                <a class="compare-link" href="@Url.RouteUrl("compare")"><h4>Compare with other faculties<i class="fas fa-arrow-right"></i></h4></a>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <h3>Study programs (@ViewBag.StatsData.StudyProgramCount)</h3>
-            <div class="flex-wrap">
+
+            <h3 class="font-light mt-20">Study programs (@ViewBag.StatsData.StudyProgramCount)</h3>
+            <div class="programs-container">
                 @foreach (StudyProgram studyProgram in ViewBag.Faculty.StudyPrograms)
                 {
                     <div class="card">
@@ -67,7 +62,69 @@
                                         <i class="fas fa-star"></i>
                                     </p>
                                     <p class="mr-5">
-                                        Overall @Math.Round(studyProgram.Reviews.Average(r => r.OveralRating), 2).ToString()
+                                        Overal @Math.Round(studyProgram.Reviews.Average(r => r.OveralRating), 2).ToString()
+                                    </p>
+                                </div>
+                                <div class="d-flex mr-5">
+                                    <p class="mr-5">
+                                        <i class="fas fa-pencil-alt"></i>
+                                    </p>
+                                    <p class="mr-5">
+                                        Reviews: @studyProgram.Reviews.Count.ToString()
+                                    </p>
+                                </div>
+                            </div>
+                        }
+                    </div>
+
+                    <div class="card">
+                        <a href="@Url.RouteUrl("program_page", new { id = studyProgram.Id})">
+                            <h4>@studyProgram.Title</h4>
+                        </a>
+                        @if (studyProgram.Reviews.Count > 0)
+                        {
+                            <div class="d-flex">
+                                <div class="d-flex mr-5">
+                                    <p class="mr-5">
+                                        <i class="fas fa-star"></i>
+                                    </p>
+                                    <p class="mr-5">
+                                        Overal @Math.Round(studyProgram.Reviews.Average(r => r.OveralRating), 2).ToString()
+                                    </p>
+                                </div>
+                                <div class="d-flex mr-5">
+                                    <p class="mr-5">
+                                        <i class="fas fa-pencil-alt"></i>
+                                    </p>
+                                    <p class="mr-5">
+                                        Reviews: @studyProgram.Reviews.Count.ToString()
+                                    </p>
+                                </div>
+                            </div>
+                        }
+                    </div>
+
+                    <div class="card">
+                        <a href="@Url.RouteUrl("program_page", new { id = studyProgram.Id})">
+                            <h4>@studyProgram.Title</h4>
+                        </a>
+                        @if (studyProgram.Reviews.Count > 0)
+                        {
+                            <div class="d-flex">
+                                <div class="d-flex mr-5">
+                                    <p class="mr-5">
+                                        <i class="fas fa-star"></i>
+                                    </p>
+                                    <p class="mr-5">
+                                        Overal @Math.Round(studyProgram.Reviews.Average(r => r.OveralRating), 2).ToString()
+                                    </p>
+                                </div>
+                                <div class="d-flex mr-5">
+                                    <p class="mr-5">
+                                        <i class="fas fa-pencil-alt"></i>
+                                    </p>
+                                    <p class="mr-5">
+                                        Reviews: @studyProgram.Reviews.Count.ToString()
                                     </p>
                                 </div>
                             </div>
@@ -76,15 +133,13 @@
                 }
             </div>
         </div>
-        <div class="col-sm-6 locations">
-            <h3>Locations (@ViewBag.StatsData.LocationCount)</h3>
-            <div class="d-flex flex-wrap">
-                @foreach (Address a in ViewBag.Faculty.Addresses)
-                {
-                    <h3><i class="fas fa-map-marker-alt"></i> @a.ToString()</h3>
-                }
-            </div>
+
+        <div class="col-md-7 col-sm-12">
+            @{
+                string address = ViewBag.Address.Replace(",", "").Replace(" ", "%20");
+                string str = "https://maps.google.com/maps?q=" + address + "%20&t=&z=13&ie=UTF8&iwloc=&output=embed";
+            }
+            <iframe class="faculty-map" src=@str allowfullscreen></iframe>
         </div>
     </div>
 </div>
-
