--- a/Views/Course/Course.cshtml
+++ b/Views/Course/Course.cshtml
@@ -2,33 +2,34 @@
 @{
     ViewBag.Title = "Course";
 }
-
-<h2><i class="fas fa-book"></i>  @ViewBag.Course.Title</h2>
-<div class="container">
+<div class="container container-fluid">
+    <h2>
+        <i class="fas fa-book"></i>  @ViewBag.Course.Title
+    </h2>
     <div class="row">
         <div class="col-md-6">
-            <h3>Statistics</h3>
+            <h3 class="font-light">Statistics</h3>
             <table class="table">
                 <tbody>
                     <tr>
-                        <th scope="row">Overall rating</th>
-                        <td class="td">@ViewBag.StatsData.OveralRating/10</td>
+                        <th scope="row">Overal rating</th>
+                        <td class="td">@ViewBag.StatsData.OveralRating / 10</td>
                     </tr>
                     <tr>
                         <th>Level of satisfaction</th>
-                        <td class="td">@ViewBag.StatsData.Satisfaction/10</td>
+                        <td class="td">@ViewBag.StatsData.Satisfaction / 10</td>
                     </tr>
                     <tr>
                         <th>Level of difficulty</th>
-                        <td class="td">@ViewBag.StatsData.Difficulty/10</td>
+                        <td class="td">@ViewBag.StatsData.Difficulty / 10</td>
                     </tr>
                     <tr>
                         <th>Level of usefulness</th>
-                        <td class="td">@ViewBag.StatsData.Usefulness/10</td>
+                        <td class="td">@ViewBag.StatsData.Usefulness / 10</td>
                     </tr>
                     <tr>
                         <th>Level of interest</th>
-                        <td class="td">@ViewBag.StatsData.Interesting/10</td>
+                        <td class="td">@ViewBag.StatsData.Interesting / 10</td>
                     </tr>
                     <tr>
                         <th>Theory percentage</th>
@@ -51,25 +52,8 @@
 
                 </tbody>
             </table>
-            <h3>Reviews (@ViewBag.StatsData.ReviewCount)</h3>
-            <div class="review-list">
-                @foreach (Review review in ViewBag.Course.Reviews)
-                {
-                    <div class="review-container">
-                        <div class="row">
-                            <i class="fas fa-user-circle fa-5x col-sm-2"></i>
-                            <div class="review-details col-sm-10">
-                                <h5>@review.User.Name</h5>
-                                <i class="fas fa-star"></i> Rating @review.OveralRating/10
-                                <p>@review.Text</p>
-                            </div>
-                        </div>
-                    </div>
-                }
-            </div>
-        </div>
-        <div class="col-md-6">
-            <h3>Student uploaded course material (@ViewBag.Course.UploadedFiles.Count files)</h3>
+
+            <h3 class="font-light mb-20">Student uploaded course material (@ViewBag.Course.UploadedFiles.Count files)</h3>
             <div class="m-w-400">
                 @foreach (UploadedFile file in ViewBag.Course.UploadedFiles)
                 {
@@ -88,10 +72,27 @@
                         <label for="file">Upload your course material</label>
                         <input class="mt-5" type="file" name="file" id="file" />
                         <input class="mt-5" value="@ViewBag.Course.Id" type="hidden" name="course" id="course" />
-                        <button class="mt-20 btn btn-primary rsp" type="submit" >Upload</button>
+                        <button class="mt-20 button rsp" type="submit">Upload</button>
                     </form>
                 </div>
             }
+        </div>
+
+        <div class="col-md-6">
+            <h3 class="font-light">Reviews (@ViewBag.StatsData.ReviewCount)</h3>
+            <div class="review-list">
+                @foreach (Review review in ViewBag.Course.Reviews)
+                {
+                    <div class="review-container">
+                        <img src="https://eu.ui-avatars.com/api/?name=@review.User.Name&background=bfbfbf&color=FFFFFF" />
+                        <div>
+                            <h4>@review.User.Name</h4>
+                            <i class="fas fa-star"></i> Rating @review.OveralRating / 10
+                            <p>@review.Text</p>
+                        </div>
+                    </div>
+                }
+            </div>
         </div>
     </div>
 </div>
