--- a/Views/StudyProgram/StudyProgram.cshtml
+++ b/Views/StudyProgram/StudyProgram.cshtml
@@ -50,7 +50,7 @@
                 {
                     <div class="course-container card">
                         <a href="@Url.RouteUrl("course_page", new { id = course.Id })">
-                            <h3>@course.Title</h3>
+                            <h3 class="font-light">@course.Title</h3>
                         </a>
                         <div class="d-flex">
                             @if (course.Reviews.Count > 0)
