--- a/Views/Advisor/Review/Partials/_CourseFormPartial.cshtml
+++ b/Views/Advisor/Review/Partials/_CourseFormPartial.cshtml
@@ -5,7 +5,7 @@
     <div class="container-fluid">
         <div class="col-lg-6 mt-20">
             <div class="form-group">
-                <label for="university">Select your university</label>
+                <label class="font-light" for="university">Select your university</label>
                 <select class="form-control m-w-unset university-select" id="university">
                     <option selected disabled hidden>University</option>
                     @foreach (University uni in ViewBag.Universities)
@@ -16,7 +16,7 @@
             </div>
 
             <div class="form-group">
-                <label for="program">Select your study program</label>
+                <label class="font-light" for="program">Select your study program</label>
                 <select class="form-control m-w-unset program-select" id="program">
                     <option selected disabled hidden>Study program</option>
                     @foreach (StudyProgram program in ViewBag.StudyPrograms)
@@ -27,7 +27,7 @@
             </div>
 
             <div class="form-group">
-                <label for="course">Select course</label>
+                <label class="font-light" for="course">Select course</label>
                 <select class="form-control m-w-unset course-select" id="course" name="course">
                     <option selected disabled hidden>Course</option>
                     @foreach (Course course in ViewBag.Courses)
@@ -39,7 +39,7 @@
         </div>
         <div class="col-lg-6 mt-20">
             <div class="form-group">
-                <label for="overall-input">Overall rating</label>
+                <label class="font-light" for="overall-input">Overal rating</label>
                 <div class="stars" id="overall">
                     @Html.TextBoxFor(r => r.OveralRating, new { @type = "hidden", id = "overall-input" })
                     @for (int i = 0; i < 10; i++)
@@ -50,7 +50,7 @@
             </div>
 
             <div class="form-group">
-                <label for="satisfaction-input">Your satisfaction with the course</label>
+                <label class="font-light" for="satisfaction-input">Your satisfaction with the course</label>
                 <div class="stars" id="satisfaction">
                     @Html.TextBoxFor(r => r.Satisfaction, new { @type = "hidden", id = "satisfaction-input" })
                     @for (int i = 0; i < 10; i++)
@@ -61,7 +61,7 @@
             </div>
 
             <div class="form-group">
-                <label for="usefulness-input">Course usefulness</label>
+                <label class="font-light" for="usefulness-input">Course usefulness</label>
                 <div class="stars" id="usefulness">
                     @Html.TextBoxFor(r => r.Usefulness, new { @type = "hidden", id = "usefulness-input" })
                     @for (int i = 0; i < 10; i++)
@@ -72,7 +72,7 @@
             </div>
 
             <div class="form-group">
-                <label for="interesting-input">How interesting was the course?</label>
+                <label class="font-light" for="interesting-input">How interesting was the course?</label>
                 <div class="stars" id="interesting">
                     @Html.TextBoxFor(r => r.Interesting, new { @type = "hidden", id = "interesting-input" })
                     @for (int i = 0; i < 10; i++)
@@ -83,7 +83,7 @@
             </div>
 
             <div class="form-group">
-                <label for="difficulty-input">How difficult was the course?</label>
+                <label class="font-light" for="difficulty-input">How difficult was the course?</label>
                 <div class="stars" id="difficulty">
                     @Html.TextBoxFor(r => r.Difficulty, new { @type = "hidden", id = "difficulty-input" })
                     @for (int i = 0; i < 10; i++)
@@ -95,8 +95,8 @@
 
             <div class="form-group slider-container mt-20">
                 <div class="d-flex justify-content-between m-w-300">
-                    <p class="slider-span m-0">Theory</p>
-                    <p class="slider-span m-0">Practice</p>
+                    <p class="font-light slider-span m-0">Theory</p>
+                    <p class="font-light slider-span m-0">Practice</p>
                 </div>
                 <div>
                     @Html.TextBoxFor(r => r.TheoryPercentage, new { @type = "range", @class = "slider m-w-300 mt-5", @min = 0, @max = 100 })
@@ -105,7 +105,7 @@
         </div>
         <div class="col-lg-12">
             @Html.TextArea("Text", new { @class = "form-control review-textarea w-100 m-w-unset", @placeholder = "Enter your review... ", @rows = 5 })
-            <button id="course-review-submit" type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
+            <button id="course-review-submit" type="submit" class="button mt-20 w-100">Submit</button>
         </div>
     </div>
 </form>
