--- a/Views/Advisor/Review/Partials/_StudyProgramFormPartial.cshtml
+++ b/Views/Advisor/Review/Partials/_StudyProgramFormPartial.cshtml
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="col-lg-6 mt-20">
             <div class="form-group">
-                <label for="university">Select your university</label>
+                <label class="font-light" for="university">Select your university</label>
                 <select name="university" class="university-select form-control m-w-unset" id="university">
                     <option selected disabled hidden>University</option>
                     @foreach (University uni in ViewBag.Universities)
@@ -15,7 +15,7 @@
             </div>
 
             <div class="form-group">
-                <label for="program">Select your study program</label>
+                <label class="font-light" for="program">Select your study program</label>
                 <select name="program" class="program-select form-control m-w-unset" id="program">
                     <option selected disabled hidden>Study program</option>
                     @foreach (StudyProgram program in ViewBag.StudyPrograms)
@@ -26,7 +26,7 @@
             </div>
 
             <div class="form-group">
-                <label for="startyear-select">During which university year did you start your career?</label>
+                <label class="font-light" for="startyear-select">During which university year did you start your career?</label>
                 @Html.DropDownListFor(
                     r => r.CareerStartYear,
                     new SelectList(new int[] { 1, 2, 3, 4 }),
@@ -36,7 +36,7 @@
             </div>
 
             <div class="form-group">
-                <label for="salary">How much $ are you making?</label>
+                <label class="font-light" for="salary">How much $ are you making?</label>
                 @Html.TextBoxFor(
                     r => r.Salary,
                     new { @type = "number", @class = "form-control m-w-unset", @placeholder = "My current salary is..." }
@@ -45,12 +45,12 @@
 
             <div class="form-group mt-20">
                 @Html.CheckBoxFor(r => r.RelevantIndustry)
-                <label for="RelevantIndustry">I am working in a relevant industry</label>
+                <label class="font-light" for="RelevantIndustry">I am working in a relevant industry</label>
             </div>
         </div>
         <div class="col-lg-6 mt-20">
             <div class="form-group">
-                <label for="overall-input">Overall rating</label>
+                <label class="font-light" for="overall-input">Overal rating</label>
                 <div class="stars" id="overall">
                     @Html.TextBoxFor(r => r.OveralRating, new { @type = "hidden", id = "overall-input" })
                     @for (int i = 0; i < 10; i++)
@@ -61,7 +61,7 @@
             </div>
 
             <div class="form-group">
-                <label for="difficulty-input">Program difficulty</label>
+                <label class="font-light" for="difficulty-input">Program difficulty</label>
                 <div class="stars" id="difficulty">
                     @Html.TextBoxFor(r => r.Difficulty, new { @type = "hidden", id = "difficulty-input" })
                     @for (int i = 0; i < 10; i++)
@@ -72,7 +72,7 @@
             </div>
 
             <div class="form-group mt-20">
-                <label for="satisfaction-input">Your satisfaction with the program</label>
+                <label class="font-light" for="satisfaction-input">Your satisfaction with the program</label>
                 <div class="stars" id="satisfaction">
                     @Html.TextBoxFor(r => r.Satisfaction, new { @type = "hidden", id = "satisfaction-input" })
                     @for (int i = 0; i < 10; i++)
@@ -85,7 +85,7 @@
 
         <div class="col-lg-12">
             @Html.TextArea("Text", new { @class = "form-control review-textarea w-100 m-w-unset", @placeholder = "Enter your review... ", @rows = 5 })
-            <button id="program-review-submit" type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
+            <button id="program-review-submit" type="submit" class="button mt-20 w-100">Submit</button>
         </div>
     </div>
 </form>
