Add container to comparison page.

--- a/Views/Advisor/Comparison.cshtml
+++ b/Views/Advisor/Comparison.cshtml
@@ -1,7 +1,11 @@
-﻿@{ 
+﻿@{
     ViewBag.Title = "Compare";
 }
-<div id="comparison"></div>
+
+<div class="container container-fluid">
+    <div id="comparison"></div>
+</div>
+
 @section scripts
 {
     <script src="~/Assets/js/dist/comparison.js"></script>
