--- a/Assets/css/faculty.css
+++ b/Assets/css/faculty.css
@@ -1,22 +1,33 @@
-﻿.about-section {
-    height: 165px;
-    overflow-y: auto;
-    padding: 6px;
-    box-shadow: 3px 5px 15px 2px rgba(0,0,0,0.1);
-}
-
-.faculty-map {
-    height: 420px;
+﻿.faculty-map {
     width: 100%;
     border: 0;
+    min-height: 70vh;
+    margin-top: 30px;
+    border-radius: 10px;
 }
+
+.stats-container {
+    background: rgba(255, 255, 255, .5);
+}
+
+.faculty-container {
+    padding: 0 40px;
+    max-width: 1500px;
+    margin: auto;
+}
+
+.programs-container {
+    display: flex;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+}
+
+    .programs-container .card {
+        flex-grow: 1;
+    }
 
 @media only screen and (max-width: 600px) {
     .faculty-map {
         max-height: 200px;
-    }
-
-    .locations {
-        display: none;
     }
 }
