--- a/Assets/css/layout.css
+++ b/Assets/css/layout.css
@@ -4,6 +4,7 @@
     padding: 0;
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: Roboto, sans-serif;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -24,6 +25,11 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+:root {
+    --color-danger: #ca0000;
+    --color-info: #288fff;
 }
 
 .mt-5 {
@@ -52,6 +58,14 @@ textarea {
 
 .mr-5 {
     margin-right: 5px;
+}
+
+.mr-10 {
+    margin-right: 10px;
+}
+
+.ml-10 {
+    margin-left: 10px;
 }
 
 .w-50 {
@@ -123,7 +137,7 @@ textarea {
 }
 
 .card-text {
-word-wrap: break-word;
+    word-wrap: break-word;
 }
 
 .card:hover {
@@ -145,12 +159,7 @@ word-wrap: break-word;
 }
 
 .review-list {
-    background: #f8f8f8;
     width: 100%;
-    border-right: 1px solid #c4c4c4;
-    height: 500px;
-    overflow-y: scroll;
-    box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.1);
 }
 
 .review-details h5 {
@@ -164,29 +173,120 @@ word-wrap: break-word;
 }
 
 .review-container {
-    border-bottom: 1px solid #c4c4c4;
-    margin: 0;
-    padding: 18px 16px 10px;
+    border: 1px solid #c4c4c4;
+    margin: 15px 0;
+    display: flex;
+    border-radius: 10px
+}
+
+    .review-container > div {
+        padding: 10px 15px;
+        flex: 3;
+    }
+
+    .review-container > img {
+        flex: 1;
+        border-radius: 10px;
+        max-height: 100%;
+        max-width: 115px;
+    }
+
+    .review-container .avatar {
+        background: url("https://eu.ui-avatars.com/api/?name=@review.User.Name&background=bfbfbf&color=FFFFFF") center no-repeat;
+        background-size: cover;
+    }
+
+.font-light {
+    font-weight: 300;
+}
+
+.button {
+    border-radius: 4px;
+    border: 0;
+    background: #313131;
+    cursor: pointer;
+    padding: 10px 20px;
+    color: white;
+    text-align: center;
+}
+
+    .button:hover {
+        background: black;
+    }
+
+    .button a {
+        color: white;
+    }
+
+        .button a:hover {
+            color: white;
+            text-decoration: none;
+        }
+
+    .button.compare-arrow-parrent {
+        transition: all .2s;
+    }
+
+        .button.compare-arrow-parrent:hover {
+            padding-right: 50px;
+            transform-origin: left;
+        }
+
+    .button.button-danger {
+        background: var(--color-danger);
+    }
+
+.cloud-tag {
+    padding: 10px 15px;
+    border-radius: 20px;
+    background: #313131;
+    color: white;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px 5px;
+    transition: all .2s;
+}
+
+    .cloud-tag:hover {
+        color: white;
+        text-decoration: none;
+        transform: scale(1.1, 1.1);
+        background: black;
+    }
+
+    .cloud-tag:active {
+        color: white;
+        text-decoration: none;
+    }
+
+.compare-arrow {
+    transition: all .2s;
+}
+
+.compare-arrow-parrent:hover .compare-arrow {
+    transform: translateX(10px);
+}
+
+.table > tbody > tr > th {
+    width: 75%;
 }
 
 @media only screen and (max-width: 1200px) {
-    .carousel-w {
-        max-width: 80%;
-    }
     .item {
         height: 400px;
     }
-    .item > img {
+
+        .item > img {
             min-width: 100%;
             min-height: 100%;
-    }
+        }
 }
 
 @media only screen and (max-width: 786px) {
     .card {
         width: 100%;
     }
-
 }
 
 @media only screen and (max-width: 650px) {
@@ -194,33 +294,28 @@ word-wrap: break-word;
         height: 215px;
     }
 
-    .item > img {
+        .item > img {
             min-width: 100%;
             min-height: 100%;
-    }
+        }
 
     .compare-link {
         display: none;
     }
-
 }
 
-@media only screen and (max-width: 400px){
-    .carousel-w {
-        max-width: 100%;
-    }
+@media only screen and (max-width: 400px) {
     .item {
         height: 180px;
     }
-    .item > img{
-        min-width: 100%;
-        min-height: 100%;
-    }
+
+        .item > img {
+            min-width: 100%;
+            min-height: 100%;
+        }
+
     .compare-link {
         padding-top: 5px;
         padding-bottom: 5px;
-    }
-    .sm-mt-20{
-        margin-top: 20px;
     }
 }
