--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,72 +1,26 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<html>
-<body>
-    <div class="container-fluid carousel-w">
-        <h1 class="mb-50">Welcome to University Advisor!</h1>
-        <div class="row">
-            <div class="col-lg-8">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
-
-                    <div class="carousel-inner">
-                        <div class="item active m-h-400">
-                            <img src="https://www.st-andrews.ac.uk/assets/university/study-at-st-andrews/images/study-hero-banner-750x500.jpg" alt="Slide1">
-                            <div class="carousel-caption">
-                                <h3>Explore</h3>
-                                <p>Universities, faculties, study programs</p>
-                            </div>
-                        </div>
-
-                        <div class="item m-h-400">
-                            <img src="https://g3.dcdn.lt/images/pix/vilniaus-universitetas-edgaro-kurausko-nuotr-78325971.jpg" alt="Slide2">
-                            <div class="carousel-caption">
-                                <h3>Share</h3>
-                                <p>Your opinion with fellow students</p>
-                            </div>
-                        </div>
-
-                        <div class="item m-h-400">
-                            <img src="~/Assets/images/sample.jpg" alt="Slide3">
-                            <div class="carousel-caption">
-                                <h3>Compare</h3>
-                                <p>Different universities and choose your favorite</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <h2>About</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
-                    dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
-                    ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
-                    viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
-                    In hac habitasse platea. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
-                    dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
-                    ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
-                    viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
-                    In hac habitasse platea.
-                </p>
-            </div>
+<div class="container container-fluid mt-50">
+    <div class="row">
+        <div class="col-md-6 col-sm-12">
+            <h2>Welcome to University Advisor!</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
+                dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
+                ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
+                viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
+                In hac habitasse platea. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Vivamus blandit ut urna a cursus. Nunc semper lacinia enim vel
+                dapibus. Nullam consectetur, nunc nec malesuada iaculis, eros
+                ipsum auctor dolor, eu fringilla arcu nunc id metus. Curabitur
+                viverra aliquam erat ac gravida. Vestibulum ultrices aliquet rutrum.
+                In hac habitasse platea.
+            </p>
+        </div>
+        <div class="col-md-6 col-sm-12">
+            <img src="~/Assets/images/home-1.jpg" class="home-image">
         </div>
     </div>
-</body>
-</html>
+</div>
