--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,39 +4,131 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - University Advisor</title>
+    <link runat="server" rel="shortcut icon" href="~/Assets/images/favicon.ico" type="image/x-icon" />
+    <link runat="server" rel="icon" href="~/Assets/images/favicon.ico" type="image/ico" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet" />
     @Styles.Render("~/bundles/css")
     @Scripts.Render("~/bundles/modernizr")
     @RenderSection("stylesheets", required: false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("University Advisor", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                @Html.Partial("_LoginPartial")
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="@Url.RouteUrl("universities_list")">Universities</a></li>
-                    <li><a href="@Url.RouteUrl("review_page")">Leave a review!</a></li>
-                    @if (User.IsInRole("Admin"))
-                    {
-                        <li><a href="@Url.RouteUrl("admin_page")">Admin</a></li>
-                    }
-                </ul>
-            </div>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            @Html.ActionLink("University Advisor", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        </div>
+        <div class="navbar-collapse collapse">
+            @Html.Partial("_LoginPartial")
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="@Url.RouteUrl("universities_list")">Universities</a></li>
+                <li><a href="@Url.RouteUrl("review_page")">Leave a review!</a></li>
+                @if (User.IsInRole("Admin"))
+                {
+                    <li><a href="@Url.RouteUrl("admin_page")">Admin</a></li>
+                }
+            </ul>
         </div>
     </div>
-    <div class="container body-content mt-50">
-        @RenderBody()
-    </div>
-    
+    @if (Request.Url.AbsolutePath == "/")
+    {
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
+
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="~/Assets/images/slide1.jpg">
+                    <div class="carousel-caption">
+                        <h3>Explore</h3>
+                        <p>Universities, faculties, study programs</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="~/Assets/images/slide2.jpg">
+                    <div class="carousel-caption">
+                        <h3>Share</h3>
+                        <p>Your opinion with fellow students</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="~/Assets/images/slide3.jpg">
+                    <div class="carousel-caption">
+                        <h3>Compare</h3>
+                        <p>Different universities and choose your favorite</p>
+                    </div>
+                </div>
+            </div>
+
+            <a class="left carousel-control" href="#carousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    }
+    else if (Request.Url.AbsolutePath != "/login"
+        && Request.Url.AbsolutePath != "/register"
+        && Request.Url.AbsolutePath != "/Account/ExternalLoginCallback"
+        && Request.Url.AbsolutePath != "/admin")
+    {
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
+
+            <div class="carousel-inner">
+                <div class="item active narrow">
+                    <img src="~/Assets/images/slide1.jpg">
+                    <div class="carousel-caption">
+                        <h3>Explore</h3>
+                        <p>Universities, faculties, study programs</p>
+                    </div>
+                </div>
+
+                <div class="item narrow">
+                    <img src="~/Assets/images/slide2.jpg">
+                    <div class="carousel-caption">
+                        <h3>Share</h3>
+                        <p>Your opinion with fellow students</p>
+                    </div>
+                </div>
+
+                <div class="item narrow">
+                    <img src="~/Assets/images/slide3.jpg">
+                    <div class="carousel-caption">
+                        <h3>Compare</h3>
+                        <p>Different universities and choose your favorite</p>
+                    </div>
+                </div>
+            </div>
+
+            <a class="left carousel-control" href="#carousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    }
+    @RenderBody()
+
     <div class="container body-content">
         <hr />
         @Html.Partial("_FooterPartial")
